Dark mode & accessibility fixes - top bar & drawer

--- a/_includes/beatrice/03-organisms/01-top-app-bar/_top-app-bar.scss
+++ b/_includes/beatrice/03-organisms/01-top-app-bar/_top-app-bar.scss
@@ -42,8 +42,11 @@
     }
   }
   a {
-    color: rgba(0, 0, 0, 0.54);
-    &:link,
+    color: darken($color-gray-700 ,10%);
+    @media (prefers-color-scheme:dark) {
+      color: var(--color-text);
+    }
+  &:link,
     &:visited {
       text-decoration: none;
     }
